--- a/src/index.scss
+++ b/src/index.scss
@@ -12,3 +12,8 @@ Google Fonts
 // Not Necessary for project
 // It's for demo page
 @import './assets/scss/demo-page.scss';
+#root {
+   overflow-x: hidden !important;
+   font-family: "Montserrat", sans-serif !important;
+
+  }
