--- a/src/assets/scss/utilities/_navbar.scss
+++ b/src/assets/scss/utilities/_navbar.scss
@@ -15,6 +15,7 @@
     }
 
     & > a {
+      text-decoration: none;
       color: $white;
       display: block;
       line-height: 1;
@@ -47,9 +48,9 @@
 
       // Sub Menu
       .submenu-nav {
+        text-decoration: none;
         background-color: $white;
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-        border-bottom: 2px solid $brandColor;
         position: absolute;
         left: -25px;
         top: 100%;
