--- a/src/assets/scss/sections/_about.scss
+++ b/src/assets/scss/sections/_about.scss
@@ -4,8 +4,8 @@
 
 .about-content {
   @media #{$xl-device} {
-    margin-left: 55px;
-    padding-right: 80px;
+    margin-left: 30px;
+    padding-right: 40px;
   }
 
   h6 {
@@ -21,6 +21,7 @@
     position: relative;
     padding-right: 20px;
     margin-bottom: 30px;
+    text-align: justify;
 
     @media #{$sm-device} {
       margin-bottom: 20px;
@@ -105,6 +106,7 @@
   }
 
   .about-content{
+   
     padding-top: 100px;
     padding-bottom: 110px;
 
