--- a/src/assets/scss/base/_variables.scss
+++ b/src/assets/scss/base/_variables.scss
@@ -1,5 +1,6 @@
 //== Typography Variable
-$baseFont: 'Montserrat', sans-serif;
+//$baseFont: 'Montserrat', sans-serif;
+$baseFont: "Roboto", sans-serif;
 $baseFontSize: 15px;
 $mdi-icon: 'Material Design Icons';
 $fa-icon: 'FontAwesome';
