--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,6 @@ Google Fonts
 @import './assets/scss/demo-page.scss';
 #root {
    overflow-x: hidden !important;
-   font-family: "Montserrat", sans-serif !important;
+   font-family: "Roboto", sans-serif !important;
 
   }
