--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -3,8 +3,10 @@
 ===========================*/
 
 .header-area{
-  background-color: $brandColor;
-  padding: 30px 0;
+  background-color: #00001a;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 0;
   transition: 0.9s;
 
   &.sticky{
@@ -58,12 +60,15 @@
           &:after{
             color: $brandColor;
             font-weight: 600;
+            text-decoration: none;
           }
         }
 
         & > a{
           color: $brandColor;
           font-weight: 600;
+          text-decoration: none;
+
         }
       }
     }
