--- a/src/index.scss
+++ b/src/index.scss
@@ -15,5 +15,6 @@ Google Fonts
 #root {
    overflow-x: hidden !important;
    font-family: "Roboto", sans-serif !important;
+   font-size: 20px;
 
   }
