--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -36,6 +36,7 @@
       color: $paragraph;
       font-weight: 500;
       transition: 0.2s;
+      text-decoration: none;
 
       &:hover {
         color: $brandColor;
