--- a/src/assets/scss/components/_off-canvas.scss
+++ b/src/assets/scss/components/_off-canvas.scss
@@ -58,7 +58,7 @@
 
   &-overlay {
     background-color: rgba($black, 0.8);
-    cursor: url("../../img/icons/cancel-white.png"), auto;
+    cursor: url("src/assets/img/icons/cancel-white.png"), auto;
     position: absolute;
     left: 0;
     top: 0;
