--- a/src/assets/scss/sections/_team.scss
+++ b/src/assets/scss/sections/_team.scss
@@ -55,7 +55,7 @@
       }
 
       &:after{
-        background-image: url('../../img/team/team-arrow.png');
+        background-image: url('src/assets/img/team/team-arrow.png');
         background-repeat: no-repeat;
         background-position: center center;
         content: '';
